# dividends_extractor

./: Dividends.xlsx  README-pt.md  README.md  pyproject.toml
src/dividend_extractor/: main.py
template/: REITs.xlsx
