[project]
name = "dividend-extractor"
version = "0.1.0"
description = ""
authors = [
    {name = "guialmeidan",email = "guilhermedialmeida@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "yfinance (>=0.2.55,<0.3.0)",
    "gspread (>=6.2.0,<7.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "oauth2client (>=4.1.3,<5.0.0)"
]

[tool.poetry]
packages = [{include = "dividend_extractor", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
